# TestProject

./: CMakeLists.txt  README.md  build.sh
boards/nrf5340/: CMakeLists.txt  nrf5340.ld  startup_nrf5340.S
boards/stm32/: CMakeLists.txt  startup_stm32f4xx.s  stm32f4.ld
cmake/: toolchain_nrf5340.cmake  toolchain_stm32.cmake
src/: syscalls.c
